Tweaking of BUild scripts for windows